--- a/sheet.css
+++ b/sheet.css
@@ -1,5 +1,17 @@
 /*  LE CSS EN  DESSOUS CONCERNE LA BARRE DE RECHERCHE ET ET LES AUTRES INFOS DEDANS*/
 
+p {
+    font-family: Raleway;
+}
+
+figcaption {
+    font-family: Raleway;
+}
+
+i {
+    font-family: Raleway;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -72,4 +84,8 @@ footer {
     background-color: lightgray;
     border-radius: 15px;
     margin-right: 300px;
+}
+
+.left_populaire {
+    float: right
 }
